# PicoMite

./: AllCommands.h  Audio.c  Audio.h  BmpDecoder.c  CFunction.c  CMakeLists.txt  Commands.c  Commands.h  Custom.c  Custom.h  Draw.c  Draw.h  Editor.c  External.c  FileIO.c  FileIO.h  Functions.c  Functions.h  GPS.c  GUI.c  GUI.h  Hardware_Includes.h  I2C.c  Keyboard.c  MATHS.c  MATHS.h  MMBasic.c  MMBasic.h  MMTCPclient.c  MM_Misc.c  MM_Misc.h  MMtcpserver.c  MMtelnet.c  Memory.c  Memory.h  Onewire.c  PicoMite V5.05.06 Release notes.txt  PicoMite.c  README.md  SPI-LCD.c  (+18 more)
BASIC_DEMO/: mandel.bas  st2.bas
PicoMite/: AllCommands.h  Audio.c  Audio.h  BmpDecoder.c  CFunction.c  CMakeLists.txt  Commands.c  Commands.h  Custom.c  Custom.h  Custom.h.bak  Draw.c  Draw.h  Editor.c  Editor.h  External.c  External.h  FileIO.c  FileIO.h  Functions.c  GUI.c  GUI.h  Hardware_Includes.h  I2C.c  I2C.h  Keyboard.c  MATHS.c  MATHS.h  MMBasic.c  MMBasic.h  MM_Misc.c  MM_Misc.h  Memory.c  Memory.h  Onewire.c  PS2Keyboard.h  PicoCFunctions.h  PicoMite.c  SPI-LCD.c  SPI-LCD.h  (+16 more)
src/: Audio.c  Audio.h  CMakeLists.txt  Custom.h  Draw.c  Draw.h  External.c  FileIO.c  Include.h  MMBasic.c  MMBasic.h  MM_Misc.c  MMtcpserver.c  PicoMite.c  Version.h  configuration.h
